2010-01-06  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        platform/chromium/fast/dom/interval.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=33274

        We're seeing the debug bots take >100000 microseconds to stop
        and Interval.

        * platform/chromium/fast/dom/interval.html:

2010-01-06  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        Marker code is buggy: referencePoint translation is off
        https://bugs.webkit.org/show_bug.cgi?id=33012

        Update SVG test baseline, after rewriting marker support.

        * platform/mac/svg/W3C-SVG-1.1/painting-marker-01-f-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/painting-marker-02-f-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/painting-marker-03-f-expected.txt:
        * platform/mac/svg/custom/circular-marker-reference-1-expected.txt:
        * platform/mac/svg/custom/circular-marker-reference-2-expected.txt:
        * platform/mac/svg/custom/circular-marker-reference-3-expected.txt:
        * platform/mac/svg/custom/circular-marker-reference-4-expected.txt:
        * platform/mac/svg/custom/js-late-marker-and-object-creation-expected.txt:
        * platform/mac/svg/custom/js-late-marker-creation-expected.txt:
        * platform/mac/svg/custom/marker-changes-expected.checksum:
        * platform/mac/svg/custom/marker-changes-expected.png:
        * platform/mac/svg/custom/marker-changes-expected.txt:
        * platform/mac/svg/custom/marker-child-changes-expected.checksum:
        * platform/mac/svg/custom/marker-child-changes-expected.png:
        * platform/mac/svg/custom/marker-child-changes-expected.txt:
        * platform/mac/svg/custom/marker-default-width-height-expected.txt:
        * platform/mac/svg/custom/marker-opacity-expected.checksum: Added.
        * platform/mac/svg/custom/marker-opacity-expected.png: Added.
        * platform/mac/svg/custom/marker-opacity-expected.txt: Added.